--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "commonjs": "0.0.1",
+    "express": "^4.15.4",
+    "faye-websocket": "^0.11.1",
     "jpeg-js": "^0.3.3",
+    "permessage-deflate": "^0.1.5",
     "pixelmatch": "^4.0.2",
-    "screenshot-desktop": "^1.1.0"
+    "protobufjs": "^6.8.0",
+    "protocol-buffers": "^3.2.1",
+    "screenshot-desktop": "^1.1.0",
+    "ws": "^3.1.0"
   },
   "devDependencies": {},
   "description": ""
